<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/coffeeName"
        android:text="Hello"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_above="@id/coffeeChart"
        android:clickable="true"
        />
    <TextView
        android:id="@+id/box"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/coffeeChart"
        android:background="@drawable/coffeechartheader_style"
        />
    <TextView
        android:id="@+id/coffeeChart"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="32sp"
        android:clickable="true"
        android:background="@drawable/coffeechart_style"
        />
    <TextView
        android:id="@+id/coffeeJar"
        android:text="@string/coffeeOrigin"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"/>
    <TextView
        android:id="@+id/coffeeOrigin"
        android:text="Hello"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"
        android:layout_toRightOf="@id/processTag"/>
    <TextView
        android:id="@+id/processTag"
        android:text="@string/process"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"/>
    <TextView
        android:id="@+id/coffeeProcess"
        android:text="Hello"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="75dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"
        android:layout_toRightOf="@id/processTag"/>
    <TextView
        android:id="@+id/roastDateTag"
        android:text="@string/roastDate"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="25dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"/>
    <TextView
        android:id="@+id/roastDate"
        android:text="Hello"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="125dp"
        android:textColor="#FF303032"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_below="@id/coffeeName"
        android:layout_toRightOf="@id/processTag"/>




</RelativeLayout>